@@ -5,7 +5,7 @@
 ## Modified by:
 ## Created:     04/03/2006
 ## RCS-ID:      $Id$
-## Copyright:   (c) 2006 Mattia Barbon
+## Copyright:   (c) 2006, 2008 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
 #############################################################################
@@ -19,5 +19,5 @@ wxWriteMakefile( NAME            => 'Wx::Media',
                  WX_CORE_LIB     => 'media core base',
                  REQUIRE_WX_LIB  => 'media',
                  REQUIRE_WX      => 2.006000,
-                 NO_WX_PLATFORMS => [ 'motif' ],
+                 NO_WX_PLATFORMS => [ ],
                );
